--- a/src/components/definition/definition-header/DefinitionHeader.module.css
+++ b/src/components/definition/definition-header/DefinitionHeader.module.css
@@ -1,25 +1,34 @@
 .definition-header {
-    display: flex;
-    margin-top: 2rem;
-    justify-content: space-between;
-    align-items: flex-start;
-    letter-spacing: 1px;
+  display: flex;
+  margin-top: 2rem;
+  justify-content: space-between;
+  align-items: flex-start;
+  letter-spacing: 1px;
+
+  flex-wrap: wrap;
 }
 
 .definition-header h1 {
-    font-size: 2.5rem;
-    margin: 0;
+  font-size: 2.5rem;
+  margin: 0;
 }
 
 .definition-header p {
-    color: var(--color-purple-300);
-    margin-top: 0.75rem;
-    font-size: 1.25rem;
+  color: var(--color-purple-300);
+  margin-top: 0.75rem;
+  font-size: 1.25rem;
+}
+
+.word-overflow {
+  word-break: break-word;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  -o-hyphens: auto;
+  hyphens: auto;
 }
 
 @media screen and (min-width: 768px) {
-    .definition-header h1 {
-        font-size: 3.5rem;
-       
-    }
+  .definition-header h1 {
+    font-size: 3.5rem;
+  }
 }
